banner section completed

--- a/file/index.html
+++ b/file/index.html
@@ -71,16 +71,16 @@
       <div class="carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
           <img src="../Images/1.png" class="w-full" />
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide4" class="btn btn-circle">❮</a> 
-            <a href="#slide2" class="btn btn-circle">❯</a>
+          <div class="absolute flex lg:justify-start  transform -translate-y-1/2 left-5 right-5 top-1/2 sm:justify-center gap-8  transform -translate-y-1/2 left-4 right-3 top-3/4">
+            <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a> 
+            <a href="#slide2" class="btn btn-circle bg-black  text-white">❯</a>
           </div>
         </div> 
         <div id="slide2" class="carousel-item relative w-full">
           <img src="../Images/1.png" class="w-full" />
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide3" class="btn btn-circle">❮</a> 
-            <a href="#slide1" class="btn btn-circle">❯</a>
+          <div class="absolute flex lg:justify-start  transform -translate-y-1/2 left-5 right-5 top-1/2 sm:justify-center gap-8  transform -translate-y-1/2 left-4 right-3 top-3/4">
+            <a href="#slide1" class="btn btn-circle bg-black  text-white">❮</a> 
+            <a href="#slide2" class="btn btn-circle bg-black  text-white">❯</a>
           </div>
         </div>
       </div>
