--- a/file/index.html
+++ b/file/index.html
@@ -85,7 +85,56 @@
         </div>
       </div>
     </section>
+    <!-- professionnal hockey club section -->
+    <section>
+     <div>
+     <h1>
+        professional hockeys club
+     </h1>
+     <p>
 
+     </p> 
+     </div>
+     <div>
+     <div>
+      <div class="radial-progress text-golf-primary" style="--value:87;" role="progressbar">87%</div>
+      <h2>
+
+      </h2>
+      <p>
+
+      </p>
+      </div>
+      <div>
+      <div class="radial-progress text-success" style="--value:95;" role="progressbar">95%</div>
+      <h2>
+
+      </h2>
+      <p>
+
+      </p>
+    </div>
+    <div>
+      <div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div>
+      <h2>
+
+      </h2>
+      <p>
+
+      </p>
+    </div>
+    <div>
+      <div class="radial-progress text-info" style="--value:80;" role="progressbar">80%</div>
+      <h2>
+
+      </h2>
+      <p>
+
+      </p>
+    </div>
+  </div>
+     </div>
+    </section>
     </header>
 </body>
 </html>
