--- a/file/index.html
+++ b/file/index.html
@@ -87,49 +87,49 @@
     </section>
     <!-- professionnal hockey club section -->
     <section>
-     <div>
-     <h1>
+     <div class="border-solid border-2 border-gary-200 lg: grid justify-items-center h-36 my-16 p-2 sm:mx-3 p-2">
+     <h1 class="text-3xl font-extrabold">
         professional hockeys club
      </h1>
      <p>
-
+      “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli. “The notion of P.R. goes of course beyond sport, but they are very much applicable and indeed applied in sport and hockey in particular. In the tutorial.”
      </p> 
      </div>
-     <div>
-     <div>
+     <div class="grid lg:grid-cols-4 gap-1 sm:grid-cols-1">
+     <div class="border-solid border-2 border-gary-200">
       <div class="radial-progress text-golf-primary" style="--value:87;" role="progressbar">87%</div>
       <h2>
-
+          Prayer faclity
       </h2>
       <p>
-
+        Fenix Outdoor Group is an international group of five outdoor brands and five multi-brand outdoor retailers, operating in different markets.
       </p>
       </div>
-      <div>
+      <div class="border-solid border-2 border-gary-200">
       <div class="radial-progress text-success" style="--value:95;" role="progressbar">95%</div>
       <h2>
-
+         Experienced coach
       </h2>
       <p>
-
+        Showing that they are more than just a hockey club, Brynäs IF recently released its own sustainability report. The report focuses on the club’s efforts in the areas of environmental sustainability and social responsibility.
       </p>
     </div>
-    <div>
+    <div class="border-solid border-2 border-gary-200">
       <div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div>
       <h2>
-
+        Scnior Player
       </h2>
       <p>
-
+        “It is important for us to stay relevant in a changing world and to be a good citizen in our region,” Cahling explains. “We have an enormous potential to use our brand to help solve problems in our region and internationally and we feel it is our responsibility to do this.”
       </p>
     </div>
-    <div>
+    <div class="border-solid border-2 border-gary-200">
       <div class="radial-progress text-info" style="--value:80;" role="progressbar">80%</div>
       <h2>
-
+           Training Ground
       </h2>
       <p>
-
+        "The larger, long-term partnership contracts also open up possibilities for us to expand outside of our region and work with larger companies who also have a focus on sustainability.”
       </p>
     </div>
   </div>
