junior is runing

--- a/file/index.html
+++ b/file/index.html
@@ -28,7 +28,7 @@
       </style>
 </head>
 <body class="font-manrope">
-    <header class="md:container md:mx-auto" >
+    <header class="md:container md:mx-auto">
         <!-- navbar section -->
     <nav>
         <section>
@@ -88,44 +88,44 @@
     <!-- professionnal hockey club section -->
     <section>
      <div class="border-solid border-2 border-gary-200 lg: grid justify-items-center h-36 my-16 p-2 sm:mx-3 p-2">
-     <h1 class="text-3xl font-extrabold">
+     <h1 class="text-4xl font-extrabold">
         professional hockeys club
      </h1>
-     <p>
-      “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli. “The notion of P.R. goes of course beyond sport, but they are very much applicable and indeed applied in sport and hockey in particular. In the tutorial.”
+     <p class="text-center">
+      “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli.
      </p> 
      </div>
      <div class="grid lg:grid-cols-4 gap-1 sm:grid-cols-1">
-     <div class="border-solid border-2 border-gary-200">
+     <div class="p-4 text-center">
       <div class="radial-progress text-golf-primary" style="--value:87;" role="progressbar">87%</div>
-      <h2>
+      <h2 class="text-3xl font-semibold">
           Prayer faclity
       </h2>
       <p>
         Fenix Outdoor Group is an international group of five outdoor brands and five multi-brand outdoor retailers, operating in different markets.
       </p>
       </div>
-      <div class="border-solid border-2 border-gary-200">
+      <div class="p-4 text-center">
       <div class="radial-progress text-success" style="--value:95;" role="progressbar">95%</div>
-      <h2>
+      <h2 class="text-3xl font-semibold">
          Experienced coach
       </h2>
       <p>
-        Showing that they are more than just a hockey club, Brynäs IF recently released its own sustainability report. The report focuses on the club’s efforts in the areas of environmental sustainability and social responsibility.
+        Showing that they are more than just a hockey club, Brynäs IF recently released its own sustainability report.
       </p>
     </div>
-    <div class="border-solid border-2 border-gary-200">
+    <div class="p-4 text-center">
       <div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div>
-      <h2>
+      <h2 class="text-3xl font-semibold">
         Scnior Player
       </h2>
       <p>
-        “It is important for us to stay relevant in a changing world and to be a good citizen in our region,” Cahling explains. “We have an enormous potential to use our brand to help solve problems in our region and internationally and we feel it is our responsibility to do this.”
+        “It is important for us to stay relevant in a changing world and to be a good citizen in our region,” Cahling explains.
       </p>
     </div>
-    <div class="border-solid border-2 border-gary-200">
+    <div class="p-4 text-center">
       <div class="radial-progress text-info" style="--value:80;" role="progressbar">80%</div>
-      <h2>
+      <h2 class="text-3xl font-semibold">
            Training Ground
       </h2>
       <p>
@@ -134,6 +134,49 @@
     </div>
   </div>
      </div>
+    </section>
+    <!-- program section -->
+    <section>
+      <div class="border-solid border-2 border-gary-200 lg: grid justify-items-center h-36 my-16 p-2 sm:mx-3 p-2">
+        <h1 class="text-4xl font-extrabold">
+           program section
+        </h1>
+        <p class="text-center">
+          The E.H.C. Alliance is intended to represent its member clubs and to look after their interests through direct representation and active participation in all areas where decisions are made which affect them.
+        </p> 
+        </div>
+        <div class="grid lg:grid-cols-2 gap-3 sm:grid-cols-1 gap-2">
+        <div class="hero min-h-screen" style="background-image: url(../Images/2.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">junior hockey club</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn text-white border-0 bg-golf-primary">Register Now!</button>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen" style="background-image: url(../Images/3.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">teenager hockey club</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn text-white border-0 bg-golf-primary">Register Now!</button>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen" style="background-image: url(../Images/4.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">prafessional hockey club</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn text-white border-0 bg-golf-primary">Register Now!</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     </header>
 </body>
