--- a/file/index.html
+++ b/file/index.html
@@ -67,7 +67,7 @@
         </section>
     </nav>
     <!-- banner section -->
-    <section>
+    <section class="">
       <div class="carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
           <img src="../Images/1.png" class="w-full" />
@@ -77,107 +77,135 @@
           </div>
         </div> 
         <div id="slide2" class="carousel-item relative w-full">
-          <img src="../Images/1.png" class="w-full" />
+          <img src="../Images/1.png" class="w-[100%]" />
           <div class="absolute flex lg:justify-start  transform -translate-y-1/2 left-5 right-5 top-1/2 sm:justify-center gap-8  transform -translate-y-1/2 left-4 right-3 top-3/4">
             <a href="#slide1" class="btn btn-circle bg-black  text-white">❮</a> 
             <a href="#slide2" class="btn btn-circle bg-black  text-white">❯</a>
           </div>
         </div>
       </div>
+      <!-- <div class="h-[165px] w-[565px]  mx-auto bg-black shadow-lg rounded-lg -translate-y-52 grid justify-center sm:grid-cols-1">
+        <h1 class="text-2xl text-white font-bold">
+           Meet all the hero form the field
+        </h1>
+        <p class="w-[50%] mx-auto font-base text-white">
+          hockey is best part of the world that moment i have lost mind
+        </p>
+      </div> -->
     </section>
     <!-- professionnal hockey club section -->
-    <section>
-     <div class="border-solid border-2 border-gary-200 lg: grid justify-items-center h-36 my-16 p-2 sm:mx-3 p-2">
-     <h1 class="text-4xl font-extrabold">
+ 
+  <section class="my-24">
+    <div class="text-center">
+      <h1 class="text-3xl font-bold font-manrope mb-6">
         professional hockeys club
-     </h1>
-     <p class="text-center">
-      “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli.
-     </p> 
-     </div>
-     <div class="grid lg:grid-cols-4 gap-1 sm:grid-cols-1">
-     <div class="p-4 text-center">
-      <div class="radial-progress text-golf-primary" style="--value:87;" role="progressbar">87%</div>
-      <h2 class="text-3xl font-semibold">
-          Prayer faclity
-      </h2>
-      <p>
-        Fenix Outdoor Group is an international group of five outdoor brands and five multi-brand outdoor retailers, operating in different markets.
+      </h1>
+      <p class="w-[50%] mx-auto text-base">
+        “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli.
       </p>
+    </div>
+  </section>
+  <!-- rating section -->
+  <section class="my-12">
+    <div class="grid lg:grid-cols-4 sm:grid-cols-1">
+      <div class=" text-center">
+       <div class="radial-progress text-golf-primary mb-4" style="--value:87;" role="progressbar">87%</div>
+       <h2 class="text-3xl font-semibold mb-4">
+           Prayer faclity
+       </h2>
+       <p class="w-[50%] mx-auto text-base">
+         Fenix Outdoor Group is an international group of five outdoor brands and five multi-brand outdoor retailers, operating in different markets.
+       </p>
+       </div>
+       <div class="text-center">
+       <div class="radial-progress text-success mb-4" style="--value:95;" role="progressbar">95%</div>
+       <h2 class="text-3xl font-semibold mb-4">
+          Experienced coach
+       </h2>
+       <p class="w-[50%] mx-auto text-base">
+         Showing that they are more than just a hockey club, Brynäs IF recently released its own sustainability report.
+       </p>
+     </div>
+     <div class="text-center">
+       <div class="radial-progress text-warning mb-4" style="--value:90;" role="progressbar">90%</div>
+       <h2 class="text-3xl font-semibold mb-4">
+         Scnior Player
+       </h2>
+       <p class="w-[50%] mx-auto text-base">
+         “It is important for us to stay relevant in a changing world and to be a good citizen in our region,” Cahling explains.
+       </p>
+     </div>
+     <div class="text-center">
+       <div class="radial-progress text-info mb-4" style="--value:80;" role="progressbar">80%</div>
+       <h2 class="text-3xl font-semibold mb-4">
+            Training Ground
+       </h2>
+       <p class="w-[50%] mx-auto text-base">
+         "The larger, long-term partnership contracts also open up possibilities for us to expand outside of our region and work with larger companies who also have a focus on sustainability.”
+       </p>
+     </div>
+    </div>
       </div>
-      <div class="p-4 text-center">
-      <div class="radial-progress text-success" style="--value:95;" role="progressbar">95%</div>
-      <h2 class="text-3xl font-semibold">
-         Experienced coach
-      </h2>
-      <p>
-        Showing that they are more than just a hockey club, Brynäs IF recently released its own sustainability report.
-      </p>
-    </div>
-    <div class="p-4 text-center">
-      <div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div>
-      <h2 class="text-3xl font-semibold">
-        Scnior Player
-      </h2>
-      <p>
-        “It is important for us to stay relevant in a changing world and to be a good citizen in our region,” Cahling explains.
-      </p>
-    </div>
-    <div class="p-4 text-center">
-      <div class="radial-progress text-info" style="--value:80;" role="progressbar">80%</div>
-      <h2 class="text-3xl font-semibold">
-           Training Ground
-      </h2>
-      <p>
-        "The larger, long-term partnership contracts also open up possibilities for us to expand outside of our region and work with larger companies who also have a focus on sustainability.”
-      </p>
-    </div>
-  </div>
-     </div>
-    </section>
+  </section>
     <!-- program section -->
-    <section>
-      <div class="border-solid border-2 border-gary-200 lg: grid justify-items-center h-36 my-16 p-2 sm:mx-3 p-2">
-        <h1 class="text-4xl font-extrabold">
-           program section
+    <section class="my-24">
+      <div class="text-center">
+        <h1 class="text-3xl font-bold font-manrope mb-6">
+          program section
         </h1>
-        <p class="text-center">
+        <p class="w-[50%] mx-auto text-base">
           The E.H.C. Alliance is intended to represent its member clubs and to look after their interests through direct representation and active participation in all areas where decisions are made which affect them.
-        </p> 
-        </div>
-        <div class="grid lg:grid-cols-2 gap-3 sm:grid-cols-1 gap-2">
-        <div class="hero min-h-screen" style="background-image: url(../Images/2.png);">
-          <div class="hero-overlay bg-opacity-60"></div>
-          <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
-              <h1 class="mb-5 text-5xl font-bold">junior hockey club</h1>
-              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn text-white border-0 bg-golf-primary">Register Now!</button>
-            </div>
-          </div>
-        </div>
-        <div class="hero min-h-screen" style="background-image: url(../Images/3.png);">
-          <div class="hero-overlay bg-opacity-60"></div>
-          <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
-              <h1 class="mb-5 text-5xl font-bold">teenager hockey club</h1>
-              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn text-white border-0 bg-golf-primary">Register Now!</button>
-            </div>
-          </div>
-        </div>
-        <div class="hero min-h-screen" style="background-image: url(../Images/4.png);">
-          <div class="hero-overlay bg-opacity-60"></div>
-          <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
-              <h1 class="mb-5 text-5xl font-bold">prafessional hockey club</h1>
-              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn text-white border-0 bg-golf-primary">Register Now!</button>
-            </div>
-          </div>
-        </div>
-      </div>
+        </p>
+      </div> 
+    </section>
+    <!-- hero section -->
+    <section>
+
     </section>
     </header>
+    <!-- our card section -->
+    <main class="md:container md:mx-auto">
+       <section>
+        <div class="text-center">
+          <h1 class="text-3xl font-bold font-manrope mb-6">
+            Our New Products
+          </h1>
+          <p class="w-[50%] mx-auto text-base">
+            While we feel strongly that our model for delivering hockey is to the benefit, safety and wellness of players, coaches, officials, parents, administrators and volunteers, we recognize that others remain free to participate in the game outside of sanctioned programs.
+          </p>
+        </div>
+       </section>
+       <!-- card section -->
+       <section class="my-24 flex justify-center">
+        <div>
+          <div class="rating">
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked /> 
+          </div>
+          
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="../Images/5.png" alt="Movie"/></figure>
+            <div class="card-body">
+              <h2 class="card-title">New movie is released!</h2>
+              <p>Click the button to watch on Jetflix app.</p>
+              <div class="card-actions justify-end">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="../Images/6.png" alt="Movie"/></figure>
+            <div class="card-body">
+              <h2 class="card-title">New movie is released!</h2>
+              <p>Click the button to watch on Jetflix app.</p>
+              <div class="card-actions justify-end">
+              </div>
+            </div>
+          </div>
+        </div>
+       </section>
+
+
+      </main>
 </body>
 </html>
