--- a/file/index.html
+++ b/file/index.html
@@ -94,66 +94,52 @@
       </div> -->
     </section>
     <!-- professionnal hockey club section -->
- 
-  <section class="my-24">
-    <div class="text-center">
-      <h1 class="text-3xl font-bold font-manrope mb-6">
-        professional hockeys club
-      </h1>
-      <p class="w-[50%] mx-auto text-base">
-        “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli.
-      </p>
-    </div>
-  </section>
-  <!-- rating section -->
-  <section class="my-12">
-    <div class="grid lg:grid-cols-4 sm:grid-cols-1">
-      <div class=" text-center">
-       <div class="radial-progress text-golf-primary mb-4" style="--value:87;" role="progressbar">87%</div>
-       <h2 class="text-3xl font-semibold mb-4">
-           Prayer faclity
-       </h2>
-       <p class="w-[50%] mx-auto text-base">
-         Fenix Outdoor Group is an international group of five outdoor brands and five multi-brand outdoor retailers, operating in different markets.
-       </p>
-       </div>
-       <div class="text-center">
-       <div class="radial-progress text-success mb-4" style="--value:95;" role="progressbar">95%</div>
-       <h2 class="text-3xl font-semibold mb-4">
-          Experienced coach
-       </h2>
-       <p class="w-[50%] mx-auto text-base">
-         Showing that they are more than just a hockey club, Brynäs IF recently released its own sustainability report.
-       </p>
-     </div>
-     <div class="text-center">
-       <div class="radial-progress text-warning mb-4" style="--value:90;" role="progressbar">90%</div>
-       <h2 class="text-3xl font-semibold mb-4">
-         Scnior Player
-       </h2>
-       <p class="w-[50%] mx-auto text-base">
-         “It is important for us to stay relevant in a changing world and to be a good citizen in our region,” Cahling explains.
-       </p>
-     </div>
-     <div class="text-center">
-       <div class="radial-progress text-info mb-4" style="--value:80;" role="progressbar">80%</div>
-       <h2 class="text-3xl font-semibold mb-4">
-            Training Ground
-       </h2>
-       <p class="w-[50%] mx-auto text-base">
-         "The larger, long-term partnership contracts also open up possibilities for us to expand outside of our region and work with larger companies who also have a focus on sustainability.”
-       </p>
-     </div>
-    </div>
+  <section class="text-center my-24">
+    <h2 class="text-3xl font-extrabold mb-5">
+      professional hockeys club
+    </h2>
+    <p class="lg: max-w-3xl mb-12 mx-auto">
+      “The tutorial will be about public relations, which encapsulates all actions and strategies taken to build goodwill,” said Manoli.
+    </p>
+    <!-- card container -->
+    <div class="grid grid-cols-1 lg:grid-cols-4">
+      <div class="card p-5">
+        <figure> <div class="radial-progress text-golf-primary mb-4" style="--value:87;" role="progressbar">87%</div></figure>
+        <div class="card-body justify-center">
+          <h2 class="text-3xl font-bold gap-4"> Prayer faclity</h2>
+          <p>Fenix Outdoor Group is an international group of .</p>
+        </div>
       </div>
-  </section>
+      <div class="card p-5">
+        <figure>  <div class="radial-progress text-success mb-4" style="--value:95;" role="progressbar">95%</div> </figure>
+        <div class="card-body justify-center">
+          <h2 class="text-3xl font-bold gap-4"> Experienced coach</h2>
+          <p> Showing that they are more than just a hockey club.</p>
+        </div>
+      </div>
+      <div class="card p-5">
+        <figure> <div class="radial-progress text-warning mb-4" style="--value:90;" role="progressbar">90%</div></figure>
+        <div class="card-body justify-center">
+          <h2 class="text-3xl font-bold gap-4">  Scnior Player</h2>
+          <p> “It is important for us to stay relevant in a changing world.</p>
+        </div>
+      </div>
+      <div class="card p-5">
+        <figure> <div class="radial-progress text-info mb-4" style="--value:80;" role="progressbar">80%</div> </figure>
+        <div class="card-body justify-center">
+          <h2 class="text-3xl font-bold gap-4">  Training Ground</h2>
+          <p> "The larger, long-term partnership contracts also open up possibilities.”</p>
+        </div>
+      </div>
+    </div>  
+</section>
     <!-- program section -->
     <section class="my-24">
       <div class="text-center">
         <h1 class="text-3xl font-bold font-manrope mb-6">
           program section
         </h1>
-        <p class="w-[50%] mx-auto text-base">
+        <p class="lg:max-w-3xl mx-auto text-base">
           The E.H.C. Alliance is intended to represent its member clubs and to look after their interests through direct representation and active participation in all areas where decisions are made which affect them.
         </p>
       </div> 
@@ -164,48 +150,100 @@
     </section>
     </header>
     <!-- our card section -->
-    <main class="md:container md:mx-auto">
+    <main class="container md:mx-auto">
        <section>
         <div class="text-center">
           <h1 class="text-3xl font-bold font-manrope mb-6">
             Our New Products
           </h1>
-          <p class="w-[50%] mx-auto text-base">
+          <p class="lg:max-w-3xl mx-auto text-base">
             While we feel strongly that our model for delivering hockey is to the benefit, safety and wellness of players, coaches, officials, parents, administrators and volunteers, we recognize that others remain free to participate in the game outside of sanctioned programs.
           </p>
         </div>
        </section>
-       <!-- card section -->
-       <section class="my-24 flex justify-center">
-        <div>
-          <div class="rating">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked /> 
+       <!-- clind qustion -->
+       <section class="bg-amber-400 border-2 ">
+        <div class="text-center">
+          <h1 class="text-3xl font-bold font-manrope mb-6">
+            clients question
+          </h1>
+          <p class="lg:max-w-3xl mx-auto text-base mb-24">
+            While we feel strongly that our model for delivering hockey is to the benefit, safety and wellness of players, coaches, officials, parents, administrators and volunteers, we recognize that others remain free to participate in the game outside of sanctioned programs.
+          </p>
+        </div>
+        <div class="flex flex-col lg:flex-row items-center gap-4">
+       <div>
+       <img src="../Images/11.png" class="max-w-50" alt="">
+      </div>
+      <div class="gap-4">
+        <div class="collapse collapse-plus bg-base-200 max-w-50 gap-2">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
           </div>
-          
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="../Images/5.png" alt="Movie"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-              </div>
-            </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
           </div>
         </div>
-        <div>
-          <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="../Images/6.png" alt="Movie"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-              </div>
-            </div>
+        <div class="collapse collapse-plus bg-base-200 gap-2">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
           </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 gap-2">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 gap-2">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 gap-2">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 gap-2">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+      </div>
         </div>
        </section>
-
-
+      <!-- get in touch -->
+      <section>
+        <div class="text-center">
+          <h1 class="text-3xl font-bold font-manrope mb-6">
+            get in touch
+          </h1>
+          <p class="lg:max-w-3xl mx-auto text-base">
+            While we feel strongly that our model for delivering hockey is to the benefit, safety and wellness of players, coaches, officials, parents, administrators and volunteers, we recognize that others remain free to participate in the game outside of sanctioned programs.
+          </p>
+        </div>
+       </section>
       </main>
 </body>
 </html>
