--- a/file/index.html
+++ b/file/index.html
@@ -84,14 +84,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="h-[165px] w-[565px]  mx-auto bg-black shadow-lg rounded-lg -translate-y-52 grid justify-center sm:grid-cols-1">
-        <h1 class="text-2xl text-white font-bold">
-           Meet all the hero form the field
-        </h1>
-        <p class="w-[50%] mx-auto font-base text-white">
-          hockey is best part of the world that moment i have lost mind
-        </p>
-      </div> -->
     </section>
     <!-- professionnal hockey club section -->
   <section class="text-center my-24">
@@ -134,7 +126,7 @@
     </div>  
 </section>
     <!-- program section -->
-    <section class="my-24">
+    <section class="my-24 space-y-6">
       <div class="text-center">
         <h1 class="text-3xl font-bold font-manrope mb-6">
           program section
@@ -143,6 +135,38 @@
           The E.H.C. Alliance is intended to represent its member clubs and to look after their interests through direct representation and active participation in all areas where decisions are made which affect them.
         </p>
       </div> 
+      <div class="grid gap-6 grid-cols-1 lg:grid-cols-2">
+        <div class="hero w-[full] h-[338px] " style="background-image: url(../Images/2.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn bg-golf-primary text-white border-0">Get Started</button>
+            </div>
+          </div>
+        </div>
+        <div class="hero " style="background-image: url(../Images/3.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn bg-golf-primary text-white border-0">Get Started</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hero h-[550px] space-y-6" style="background-image: url(../Images/4.png);">
+        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="max-w-md">
+            <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+            <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <button class="btn bg-golf-primary text-white border-0">Get Started</button>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- hero section -->
     <section>
