--- a/file/index.html
+++ b/file/index.html
@@ -140,9 +140,9 @@
           <div class="hero-overlay bg-opacity-60"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
-              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn bg-golf-primary text-white border-0">Get Started</button>
+              <h1 class="mb-5 text-5xl font-bold">Junior hockey club</h1>
+              <p class="mb-5">The goals of junior hockey are to promote, develop, and administer the domestic USA Hockey program for junior-aged players, teams, and leagues. USA Hockey's Junior Program is available to athletes.</p>
+              <button class="btn bg-golf-primary text-white border-0">Register Now!</button>
             </div>
           </div>
         </div>
@@ -150,9 +150,9 @@
           <div class="hero-overlay bg-opacity-60"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
-              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn bg-golf-primary text-white border-0">Get Started</button>
+              <h1 class="mb-5 text-5xl font-bold">Teenager hockey culb</h1>
+              <p class="mb-5">Two South Carolina youth hockey associations get assistance from local ECHL teams as well as the Carolina Hurricanes</p>
+              <button class="btn bg-golf-primary text-white border-0">Register Now!</button>
             </div>
           </div>
         </div>
@@ -161,16 +161,12 @@
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
           <div class="max-w-md ">
-            <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-            <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <button class="btn bg-golf-primary text-white border-0">Get Started</button>
+            <h1 class="mb-5 text-5xl font-bold">Professional hockey club</h1>
+            <p class="mb-5">Almost the full squad reunited  just a couple of notable omissions but with recent squad movements supporting the club, it was great to have some of the old guard back</p>
+            <button class="btn bg-golf-primary text-white border-0">Register Now!</button>
           </div>
         </div>
       </div>
-    </section>
-    <!-- hero section -->
-    <section>
-
     </section>
     </header>
     <!-- our card section -->
@@ -178,7 +174,7 @@
        <section class="my-24 space-y-6">
         <div class="text-center">
           <h1 class="text-3xl font-bold font-manrope mb-6">
-            Our New Products
+            Our New Products hockey
           </h1>
           <p class="lg:max-w-3xl mx-auto text-base">
             While we feel strongly that our model for delivering hockey is to the benefit, safety and wellness of players, coaches, officials, parents, administrators and volunteers, we recognize that others remain free to participate in the game outside of sanctioned programs.
@@ -208,8 +204,8 @@
                   </svg>
                   <h3>200</h3>
                 </div>
-                 <h1 class="text-5xl font-bold">Box Office News!</h1>
-                 <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                 <h1 class="text-3xl font-bold">Blue Lycra India Hockey Jersey, Solid</h1>
+                 <p class="py-6">selling to dress to blue lycra club in our shop.Id like to wish Martin all the very best and every success in his next coaching role.The Junior section provides a welcoming and social place to learn, have fun, make friends, and enjoy membership. For more information about our Junior section</p>
                  <div class="flex gap-1">
                   <p class="text-base text-golf-primary ">
                     price-$22.00
@@ -229,7 +225,7 @@
           <div>
             <div class="hero sm:min-h-[453px] lg:min-h-[218px] bg-base-200">
               <div class="hero-content flex-col lg:flex-row">
-                <img src="../Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <img src="../Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div >  
                  <div class="flex gap-2 items-center">
                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-[#facc15]">
@@ -248,8 +244,8 @@
                    </svg>
                    <h3>200</h3>
                  </div>
-                  <h1 class="text-5xl font-bold">Box Office News!</h1>
-                  <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                  <h1 class="text-3xl font-bold">Blue Lycra India Hockey logo, Solid</h1>
+                  <p class="py-6">selling to dress to blue lycra club in our shop.Id like to wish Martin all the very best and every success in his next coaching role.The Junior section provides a welcoming and social place to learn, have fun, make friends, and enjoy membership. For more information about our Junior section</p>
                   <div class="flex gap-1">
                    <p class="text-base text-golf-primary ">
                      price-$22.00
@@ -290,8 +286,8 @@
                   </svg>
                   <h3>200</h3>
                 </div>
-                 <h1 class="text-5xl font-bold">Box Office News!</h1>
-                 <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                 <h1 class="text-3xl font-bold">Blue Lycra India Hockey base, Solid</h1>
+                 <p class="py-6">selling to dress to blue lycra club in our shop.Id like to wish Martin all the very best and every success in his next coaching role.The Junior section provides a welcoming and social place to learn, have fun, make friends, and enjoy membership. For more information about our Junior section</p>
                  <div class="flex gap-1">
                   <p class="text-base text-golf-primary ">
                     price-$22.00
@@ -330,8 +326,8 @@
                    </svg>
                    <h3>200</h3>
                  </div>
-                  <h1 class="text-5xl font-bold">Box Office News!</h1>
-                  <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                  <h1 class="text-3xl font-bold">Blue Lycra India Hockey logo, Solid</h1>
+                  <p class="py-6">selling to dress to blue lycra club in our shop.Id like to wish Martin all the very best and every success in his next coaching role.The Junior section provides a welcoming and social place to learn, have fun, make friends, and enjoy membership. For more information about our Junior section</p>
                   <div class="flex gap-1">
                    <p class="text-base text-golf-primary ">
                      price-$22.00
@@ -372,8 +368,8 @@
                   </svg>
                   <h3>200</h3>
                 </div>
-                 <h1 class="text-5xl font-bold">Box Office News!</h1>
-                 <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                 <h1 class="text-3xl font-bold">Blue Lycra India Hockey Halmate, Solid</h1>
+                 <p class="py-6">selling to dress to blue lycra club in our shop.Id like to wish Martin all the very best and every success in his next coaching role.The Junior section provides a welcoming and social place to learn, have fun, make friends, and enjoy membership. For more information about our Junior section</p>
                  <div class="flex gap-1">
                   <p class="text-base text-golf-primary ">
                     price-$22.00
@@ -412,8 +408,8 @@
                    </svg>
                    <h3>200</h3>
                  </div>
-                  <h1 class="text-5xl font-bold">Box Office News!</h1>
-                  <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                  <h1 class="text-3xl font-bold">Blue Lycra India Hockey Jersey, Solid</h1>
+                  <p class="py-6">selling to dress to blue lycra club in our shop.Id like to wish Martin all the very best and every success in his next coaching role.The Junior section provides a welcoming and social place to learn, have fun, make friends, and enjoy membership. For more information about our Junior section</p>
                   <div class="flex gap-1">
                    <p class="text-base text-golf-primary ">
                      price-$22.00
@@ -512,49 +508,83 @@
             While we feel strongly that our model for delivering hockey is to the benefit, safety and wellness of players, coaches, officials, parents, administrators and volunteers, we recognize that others remain free to participate in the game outside of sanctioned programs.
           </p>
         </div>
-        <!-- input tag -->
-         <div>
-          <!-- phone tag -->
-          <div class="space-y-4">
-            <div class="card bg-[#BCED6D1A] text-[#13131866 #131318]">
-              <div class="card-body">
-                <figure><img src="../Images/Group 1171275317.png" alt=""/></figure>
-                <h2 class="card-title">Phone Number : </h2>
-                <p>(+62) 123-321-543</p>
-                <div class="card-actions justify-end">
-                </div>
-              </div>
-            </div>
-            <div class="card bg-[#FDDD5F1A] text-[#13131866 #131318]">
-              <div class="card-body">
-                <figure><img src="../Images/Group 1171275318.png" alt="" class=""/></figure>
-                <h2 class="card-title">Email : </h2>
-                <p> 
-                  hockeys@support.com</p>
-                <div class="card-actions justify-end">
-                </div>
-              </div>
-            </div>
-            <div class="card bg-[#629CF31A] text-[#13131866 #131318]">
-              <div class="card-body">
-                <figure><img src="../Images/Group 1171275321.png" alt="" class=""/></figure>
-                <h2 class="card-title">Location : </h2>
-                <p> 
-                  152/1 Mohakhali Wireless Gate</p>
-                <div class="card-actions justify-end">
-                </div>
-              </div>
+       </section>
+       <!-- input tag -->
+       <section class="my-24 space-y-4">
+       <div class="flex justify-center justify-items-center flex-col lg:flex-row">
+        <div class="grid gap-4 lg:grid-cols-1">
+          <div class="card card-compact bg-[#BCED6D1A]">
+            <figure><img src="../Images/Group 1171275317.png" alt="" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Phone Number : </h2>
+              <p>(+62) 123-321-543</p>
             </div>
           </div>
-          <!-- input tag section -->
-          <div>
-
+          <div class="card card-compact bg-[#FDDD5F1A]">
+            <figure><img src="../Images/Group 1171275318.png" alt="" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Email : </h2>
+              <p>hockeys@support.com</p>
+            </div>
           </div>
-          <!-- social section -->
-          <div>
-
+          <div class="card bg-[#629CF31A]">
+            <figure><img src="../Images/Group 1171275321.png" alt="" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Location : </h2>
+              <p>152/1 Mohakhali Wireless Gate</p>
+            </div>
           </div>
         </div>
+        <div>
+          <form class="card-body">
+            <div class="flex gap-4 sm:flex-col lg:flex-row">
+             <div>
+               <div class="form-control">
+                 <label class="label">
+                   <span class="label-text">Email</span>
+                 </label>
+                 <input type="email" placeholder="email" class="input input-bordered" required />
+               </div>
+               <div class="form-control">
+                 <label class="label">
+                   <span class="label-text">Password</span>
+                 </label>
+                 <input type="password" placeholder="password" class="input input-bordered" required />
+                 <label class="label">
+                   <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                 </label>
+               </div>
+             </div>
+             <div>
+               <div class="form-control">
+                 <label class="label">
+                   <span class="label-text">Email</span>
+                 </label>
+                 <input type="email" placeholder="email" class="input input-bordered" required />
+               </div>
+               <div class="form-control">
+                 <label class="label">
+                   <span class="label-text">Email</span>
+                 </label>
+                 <input type="email" placeholder="email" class="input input-bordered" required />
+               </div>
+             </div>
+            </div>
+            <div>
+             <label class="form-control">
+               <div class="label">
+                 <span class="label-text">Your bio</span>
+               </div>
+               <textarea class="textarea textarea-bordered h-24" placeholder="Bio"></textarea>
+             </label>
+             <div class="form-control mt-6">
+               <button class="btn btn-primary">Login</button>
+             </div>
+           </div>
+           </form>
+           </div>
+        </div>
+       </div>   
        </section>
       </main>
       <!-- footer section -->
